@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{8926CC6D-4B1A-47BA-B51E-0D19898366BB}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{A0A49980-F5BB-466D-AD64-119C086A4A6C}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AjIo</RootNamespace>
-    <AssemblyName>AjIo</AssemblyName>
+    <RootNamespace>AjIo.Console</RootNamespace>
+    <AssemblyName>AjIo.Console</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -45,25 +45,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Compiler\ParserException.cs" />
-    <Compile Include="Compiler\Lexer.cs" />
-    <Compile Include="Compiler\LexerException.cs" />
-    <Compile Include="Compiler\Parser.cs" />
-    <Compile Include="Compiler\Token.cs" />
-    <Compile Include="Compiler\TokenType.cs" />
-    <Compile Include="Language\BaseObject.cs" />
-    <Compile Include="Language\ClonedObject.cs" />
-    <Compile Include="Language\IObject.cs" />
-    <Compile Include="Language\IoObject.cs" />
-    <Compile Include="Language\Message.cs" />
-    <Compile Include="Language\IMethod.cs" />
-    <Compile Include="Language\Terminator.cs" />
-    <Compile Include="Machine.cs" />
-    <Compile Include="Methods\CloneMethod.cs" />
-    <Compile Include="Methods\SetSlotMethod.cs" />
-    <Compile Include="Methods\NewSlotMethod.cs" />
-    <Compile Include="Methods\SetterMethod.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AjIo\AjIo.csproj">
+      <Project>{8926CC6D-4B1A-47BA-B51E-0D19898366BB}</Project>
+      <Name>AjIo</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
