@@ -4,6 +4,7 @@ using System.Collections.Generic;
 using System.Linq;
 
 using AjIo.Language;
+using AjIo.Methods;
 
 using Microsoft.VisualStudio.TestTools.UnitTesting;
 
@@ -32,7 +33,7 @@ namespace AjIo.Tests.Language
         {
             IoObject obj = new IoObject();
             Message message = new Message("clone");
-            object result = obj.Process(message);
+            object result = obj.Process(null, message);
 
             Assert.IsNotNull(result);
             Assert.IsInstanceOfType(result, typeof(IObject));
@@ -41,6 +42,74 @@ namespace AjIo.Tests.Language
             ClonedObject obj2 = (ClonedObject)result;
 
             Assert.AreEqual(obj, obj2.Parent);
+        }
+
+        [TestMethod]
+        public void SetSlot()
+        {
+            IoObject obj = new IoObject();
+            Message message = new Message("setSlot", new object[] { "foo", "bar" });
+            
+            obj.Process(obj, message);
+
+            object result = obj.GetSlot("foo");
+
+            Assert.IsNotNull(result);
+            Assert.AreEqual("bar", result);
+        }
+
+        [TestMethod]
+        public void SetSlotAndGetMessage()
+        {
+            IoObject obj = new IoObject();
+            Message message = new Message("setSlot", new object[] { "foo", "bar" });
+
+            obj.Process(obj, message);
+
+            object result = obj.Process(null, new Message("foo"));
+
+            Assert.IsNotNull(result);
+            Assert.AreEqual("bar", result);
+        }
+
+        [TestMethod]
+        public void GetToString()
+        {
+            IoObject obj = new IoObject();
+            string text = obj.ToString();
+            Assert.IsTrue(text.StartsWith("Object_"));
+        }
+
+        [TestMethod]
+        public void GetClonedToString()
+        {
+            IoObject obj = new IoObject();
+            IObject cloned = new ClonedObject(obj);
+            string text = cloned.ToString();
+            Assert.IsTrue(text.StartsWith("Object_"));
+        }
+
+        [TestMethod]
+        public void NewSlot()
+        {
+            IoObject obj = new IoObject();
+            Message message = new Message("newSlot", new object[] { "foo", "bar" });
+
+            obj.Process(obj, message);
+
+            object result = obj.GetSlot("foo");
+
+            Assert.IsNotNull(result);
+            Assert.AreEqual("bar", result);
+
+            object result2 = obj.GetSlot("setFoo");
+
+            Assert.IsNotNull(result2);
+            Assert.IsInstanceOfType(result2, typeof(SetterMethod));
+
+            SetterMethod method = (SetterMethod)result2;
+
+            Assert.AreEqual("foo", method.SlotName);
         }
     }
 }
