@@ -11,6 +11,8 @@ Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution 
 		LocalTestRun.testrunconfig = LocalTestRun.testrunconfig
 	EndProjectSection
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AjIo.Console", "AjIo.Console\AjIo.Console.csproj", "{A0A49980-F5BB-466D-AD64-119C086A4A6C}"
+EndProject
 Global
 	GlobalSection(TestCaseManagementSettings) = postSolution
 		CategoryFile = AjIo.vsmdi
@@ -28,6 +30,10 @@ Global
 		{1632DA42-35E3-4C1F-85E0-2706FB84E4FB}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{1632DA42-35E3-4C1F-85E0-2706FB84E4FB}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{1632DA42-35E3-4C1F-85E0-2706FB84E4FB}.Release|Any CPU.Build.0 = Release|Any CPU
+		{A0A49980-F5BB-466D-AD64-119C086A4A6C}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{A0A49980-F5BB-466D-AD64-119C086A4A6C}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{A0A49980-F5BB-466D-AD64-119C086A4A6C}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{A0A49980-F5BB-466D-AD64-119C086A4A6C}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
