@@ -12,6 +12,17 @@
         public Machine()
             : base(new IoObject())
         {
+            this.SetSlot("Object", this.Parent);
+        }
+
+        public object Process(object receiver, Message message)
+        {
+            IObject iob = receiver as IObject;
+
+            if (iob != null)
+                return iob.Process(this, message);
+
+            throw new NotImplementedException();
         }
     }
 }
